--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,65 @@
+altair==5.5.0
 annotated-types==0.7.0
 anyio==4.9.0
+attrs==25.3.0
+black==25.1.0
+blinker==1.9.0
+cachetools==5.5.2
+certifi==2025.4.26
+cfgv==3.4.0
+charset-normalizer==3.4.2
 click==8.2.1
+distlib==0.3.9
 fastapi==0.115.12
+filelock==3.18.0
+flake8==7.2.0
+gitdb==4.0.12
+GitPython==3.1.44
 h11==0.16.0
+identify==2.6.12
 idna==3.10
+isort==6.0.1
+Jinja2==3.1.6
+jsonschema==4.23.0
+jsonschema-specifications==2025.4.1
+MarkupSafe==3.0.2
+mccabe==0.7.0
+mypy_extensions==1.1.0
+narwhals==1.40.0
+nodeenv==1.9.1
+numpy==2.2.6
+packaging==24.2
+pandas==2.2.3
+pathspec==0.12.1
+pillow==11.2.1
+platformdirs==4.3.8
+pre_commit==4.2.0
+protobuf==6.31.0
+pyarrow==20.0.0
+pycodestyle==2.13.0
 pydantic==2.11.5
 pydantic_core==2.33.2
+pydeck==0.9.1
+pyflakes==3.3.2
+python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
+pytz==2025.2
+PyYAML==6.0.2
+referencing==0.36.2
+requests==2.32.3
+rpds-py==0.25.1
+six==1.17.0
+smmap==5.0.2
 sniffio==1.3.1
 SQLAlchemy==2.0.41
 starlette==0.46.2
+streamlit==1.45.1
+tenacity==9.1.2
+toml==0.10.2
+tornado==6.5.1
 typing-inspection==0.4.1
 typing_extensions==4.13.2
+tzdata==2025.2
+urllib3==2.4.0
 uvicorn==0.34.2
+virtualenv==20.31.2
