--- a/requirements.txt
+++ b/requirements.txt
@@ -10,12 +10,16 @@ cfgv==3.4.0
 charset-normalizer==3.4.2
 click==8.2.1
 distlib==0.3.9
+distro==1.9.0
 fastapi==0.115.12
 filelock==3.18.0
 flake8==7.2.0
 gitdb==4.0.12
 GitPython==3.1.44
+groq==0.25.0
 h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
 identify==2.6.12
 idna==3.10
 isort==6.0.1
