--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+aiosqlite==0.21.0
+alembic==1.16.1
 altair==5.5.0
 annotated-types==0.7.0
 anyio==4.9.0
@@ -16,16 +18,19 @@ filelock==3.18.0
 flake8==7.2.0
 gitdb==4.0.12
 GitPython==3.1.44
+greenlet==3.2.2
 groq==0.25.0
 h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
 identify==2.6.12
 idna==3.10
+injector==0.22.0
 isort==6.0.1
 Jinja2==3.1.6
 jsonschema==4.23.0
 jsonschema-specifications==2025.4.1
+Mako==1.3.10
 MarkupSafe==3.0.2
 mccabe==0.7.0
 mypy_extensions==1.1.0
@@ -42,11 +47,13 @@ protobuf==6.31.0
 pyarrow==20.0.0
 pycodestyle==2.13.0
 pydantic==2.11.5
+pydantic-settings==2.9.1
 pydantic_core==2.33.2
 pydeck==0.9.1
 pyflakes==3.3.2
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
+python-multipart==0.0.20
 pytz==2025.2
 PyYAML==6.0.2
 referencing==0.36.2
@@ -55,6 +62,7 @@ rpds-py==0.25.1
 six==1.17.0
 smmap==5.0.2
 sniffio==1.3.1
+sqladmin==0.20.1
 SQLAlchemy==2.0.41
 starlette==0.46.2
 streamlit==1.45.1
@@ -67,3 +75,4 @@ tzdata==2025.2
 urllib3==2.4.0
 uvicorn==0.34.2
 virtualenv==20.31.2
+WTForms==3.1.2
