--- a/requirements.txt
+++ b/requirements.txt
@@ -4,15 +4,21 @@ altair==5.5.0
 annotated-types==0.7.0
 anyio==4.9.0
 attrs==25.3.0
+bcrypt==3.2.2
 black==25.1.0
 blinker==1.9.0
 cachetools==5.5.2
 certifi==2025.4.26
+cffi==1.17.1
 cfgv==3.4.0
 charset-normalizer==3.4.2
 click==8.2.1
+cryptography==45.0.3
 distlib==0.3.9
 distro==1.9.0
+dnspython==2.7.0
+ecdsa==0.19.1
+email_validator==2.2.0
 fastapi==0.115.12
 filelock==3.18.0
 flake8==7.2.0
@@ -39,13 +45,16 @@ nodeenv==1.9.1
 numpy==2.2.6
 packaging==24.2
 pandas==2.2.3
+passlib==1.7.4
 pathspec==0.12.1
 pillow==11.2.1
 platformdirs==4.3.8
 pre_commit==4.2.0
 protobuf==6.31.0
 pyarrow==20.0.0
+pyasn1==0.6.1
 pycodestyle==2.13.0
+pycparser==2.22
 pydantic==2.11.5
 pydantic-settings==2.9.1
 pydantic_core==2.33.2
@@ -53,12 +62,14 @@ pydeck==0.9.1
 pyflakes==3.3.2
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
+python-jose==3.5.0
 python-multipart==0.0.20
 pytz==2025.2
 PyYAML==6.0.2
 referencing==0.36.2
 requests==2.32.3
 rpds-py==0.25.1
+rsa==4.9.1
 six==1.17.0
 smmap==5.0.2
 sniffio==1.3.1
