--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ cffi==1.17.1
 cfgv==3.4.0
 charset-normalizer==3.4.2
 click==8.2.1
+coverage==7.8.2
 cryptography==45.0.3
 distlib==0.3.9
 distro==1.9.0
@@ -31,6 +32,7 @@ httpcore==1.0.9
 httpx==0.28.1
 identify==2.6.12
 idna==3.10
+iniconfig==2.1.0
 injector==0.22.0
 isort==6.0.1
 Jinja2==3.1.6
@@ -49,6 +51,7 @@ passlib==1.7.4
 pathspec==0.12.1
 pillow==11.2.1
 platformdirs==4.3.8
+pluggy==1.6.0
 pre_commit==4.2.0
 protobuf==6.31.0
 pyarrow==20.0.0
@@ -60,6 +63,9 @@ pydantic-settings==2.9.1
 pydantic_core==2.33.2
 pydeck==0.9.1
 pyflakes==3.3.2
+Pygments==2.19.1
+pytest==8.4.0
+pytest-asyncio==1.0.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
 python-jose==3.5.0
