Fix: Enforce authenticated swagger endpoint request

--- a/requirements.txt
+++ b/requirements.txt
@@ -35,6 +35,7 @@ idna==3.10
 iniconfig==2.1.0
 injector==0.22.0
 isort==6.0.1
+itsdangerous==2.2.0
 Jinja2==3.1.6
 jsonschema==4.23.0
 jsonschema-specifications==2025.4.1
