--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,8 @@ attrs==25.3.0
 bcrypt==3.2.2
 black==25.1.0
 blinker==1.9.0
+boto3==1.39.11
+botocore==1.39.11
 cachetools==5.5.2
 certifi==2025.4.26
 cffi==1.17.1
@@ -37,6 +39,7 @@ injector==0.22.0
 isort==6.0.1
 itsdangerous==2.2.0
 Jinja2==3.1.6
+jmespath==1.0.1
 jsonschema==4.23.0
 jsonschema-specifications==2025.4.1
 Mako==1.3.10
@@ -77,6 +80,7 @@ referencing==0.36.2
 requests==2.32.3
 rpds-py==0.25.1
 rsa==4.9.1
+s3transfer==0.13.1
 six==1.17.0
 smmap==5.0.2
 sniffio==1.3.1
